Fix export error not showing up

--- a/apps/collection-editor-frontend/src/app/modules/editor/table-edit/export/export.component.scss
+++ b/apps/collection-editor-frontend/src/app/modules/editor/table-edit/export/export.component.scss
@@ -33,3 +33,7 @@
     cursor: pointer;
   }
 }
+
+.error {
+  color: red;
+}
